--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app metadata-complete="true" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
-  
+    
 	<filter>
 		<filter-name>License</filter-name>
 		<filter-class>com.yangb.cer.WebLicense</filter-class>
@@ -10,263 +10,207 @@
 		<filter-name>License</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<display-name>ygzw-wsbsdt-front</display-name>
+	<display-name>ys-web</display-name>
 	
-  
+	
 	<context-param>
 		
-    
+		
 		<param-name>contextConfigLocation</param-name>
 		
-    
-		<param-value>classpath*:webPublicApplicationContext.xml</param-value>
 		
-  
+		<param-value>classpath:applicationContext.xml</param-value>
+		
+	
 	</context-param>
 	
-  
+	
 	<context-param>
 		
-    
+		
 		<param-name>log4jConfigLocation</param-name>
 		
-    
+		
 		<param-value>classpath*:log4j.properties</param-value>
 		
-  
+	
 	</context-param>
 	
-  
+	
+	
+	
 	<listener>
 		
-    
+		
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 		
-  
+	
 	</listener>
 	
-  
+	
 	<listener>
 		
-    
+		
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 		
-  
+	
 	</listener>
 	
-  
+	
+	
 	<filter>
 		
-    
+		
 		<filter-name>shiroFilter</filter-name>
 		
-    
+		
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		
-  
+	
 	</filter>
 	
-  
+	
 	<filter-mapping>
 		
-    
+		
 		<filter-name>shiroFilter</filter-name>
 		
-    
+		
 		<url-pattern>/*</url-pattern>
 		
-    
+		
 		<dispatcher>REQUEST</dispatcher>
 		
-    
+		
 		<dispatcher>FORWARD</dispatcher>
 		
-  
+	
 	</filter-mapping>
 	
-  
+	
+	
+	
 	<filter>
 		
-    
+		
 		<filter-name>CharacterEncodingFilter</filter-name>
 		
-    
+		
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 		
-    
+		
 		<init-param>
 			
-      
+			
 			<param-name>encoding</param-name>
 			
-      
+			
 			<param-value>utf-8</param-value>
 			
-    
+		
 		</init-param>
 		
-  
+	
 	</filter>
 	
-  
+	
 	<filter-mapping>
 		
-    
+		
 		<filter-name>CharacterEncodingFilter</filter-name>
 		
-    
+		
 		<url-pattern>/*</url-pattern>
 		
-  
+	
 	</filter-mapping>
 	
-  
+	
+	
 	<filter>
 		
-    
+		
 		<filter-name>DruidWebStatFilter</filter-name>
 		
-    
+		
 		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
 		
-    
+		
 		<init-param>
 			
-      
+			
 			<param-name>exclusions</param-name>
 			
-      
+			
 			<param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
 			
-    
+		
 		</init-param>
 		
-  
+	
 	</filter>
 	
-  
+	
 	<filter-mapping>
 		
-    
+		
 		<filter-name>DruidWebStatFilter</filter-name>
 		
-    
+		
 		<url-pattern>/*</url-pattern>
 		
-  
+	
 	</filter-mapping>
 	
-  
+
+	
 	<servlet>
 		
-    
+		
 		<servlet-name>springMVC</servlet-name>
 		
-    
+		
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		
-    
+		
 		<init-param>
 			
-      
+			
 			<param-name>contextConfigLocation</param-name>
 			
-      
-			<param-value>classpath*:spring-servlet.xml</param-value>
 			
-    
+			<param-value>classpath:spring-servlet.xml</param-value>
+			
+		
 		</init-param>
 		
-    
+		
 		<load-on-startup>1</load-on-startup>
 		
-  
+	
 	</servlet>
 	
-  
+	
 	<servlet-mapping>
 		
-    
+		
 		<servlet-name>springMVC</servlet-name>
 		
-    
+		
 		<url-pattern>/</url-pattern>
 		
-  
+	
 	</servlet-mapping>
 	
-  
-	<servlet>
-		
-    
-		<servlet-name>DruidStatView</servlet-name>
-		
-    
-		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
-		
-  
-	</servlet>
 	
-  
-	<servlet-mapping>
-		
-    
-		<servlet-name>DruidStatView</servlet-name>
-		
-    
-		<url-pattern>/druid/*</url-pattern>
-		
-  
-	</servlet-mapping>
 	
-  
 	<welcome-file-list>
 		
-    
-		<welcome-file>/</welcome-file>
 		
-  
+		<welcome-file>/index.html</welcome-file>
+		
+	
 	</welcome-file-list>
 	
-  
-  
-	<error-page>
-		
-        
-		<error-code>404</error-code>
-		
-        
-		<location>/404.html</location>
-		
-    
-	</error-page>
-	
-
-    
-	<error-page>
-		
-        
-		<error-code>403</error-code>
-		
-        
-		<location>/403.html</location>
-		
-    
-	</error-page>
-	
-
-    
-	<error-page>
-		
-        
-		<error-code>500</error-code>
-		
-        
-		<location>/500.html</location>
-		
-    
-	</error-page>
-	
-  
 
 </web-app>
